--- a/web/src/main/webapp/WEB-INF/resources/html/index.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/index.html
@@ -45,11 +45,12 @@
         </div>
         <div class="ui blue submit tiny button">Login</div>
     </div>
+
 </div>
 
     <!-- JS -->
 
-    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="../js/jquery-1.11.0.js"></script>
     <script src="../js/semantic.js"></script>
     <script src="../js/main.js"></script>
 
