--- a/web/src/main/webapp/WEB-INF/resources/html/index.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/index.html
@@ -12,40 +12,87 @@
     <link rel="stylesheet" href="../css/style.css"/>
 
 </head>
-<body>
+<body class="login-body">
 
-<div class="ui inverted segment">
-    <p>I'm here to tell you something, and you will probably read me first.</p>
+<div class="ui black small message">
+    <i class="close icon"></i>
+    <div class="header">
+        You must register before you can do that!
+    </div>
+    Visit our registration page, then try again
 </div>
 
 <div class="ui piled segment">
-    <div class="ui form segment">
-        <div class="field">
-            <label>Username</label>
-            <div class="ui left labeled icon input">
-                <input type="text" placeholder="Username">
-                <i class="user icon"></i>
-                <div class="ui corner tiny label">
-                    <i class="icon asterisk"></i>
-                </div>
-            </div>
-        </div>
-        <div class="field">
-            <label>Password</label>
-            <div class="ui left labeled icon input">
-                <input type="password">
-                <i class="lock icon"></i>
-                <div class="ui corner tiny label">
-                    <i class="icon asterisk"></i>
-                </div>
-            </div>
-        </div>
-        <div class="ui error message">
-            <div class="header">We noticed some issues</div>
-        </div>
-        <div class="ui blue submit tiny button">Login</div>
+
+    <!-- Tabs -->
+
+    <div class="ui pointing secondary demo menu">
+        <a class="active red item" data-tab="first">
+            Log in
+        </a>
+        <a class="blue item" data-tab="second">
+            Sign in
+        </a>
     </div>
 
+    <!-- Login panel -->
+
+    <div class="ui active tab segment" data-tab="first">
+        <div class="ui form segment">
+            <div class="field">
+                <label>Email</label>
+                <div class="ui small left labeled icon input">
+                    <input type="text">
+                    <i class="mail icon"></i>
+                </div>
+            </div>
+            <div class="field">
+                <label>Password</label>
+                <div class="ui small left labeled icon input">
+                    <input type="password">
+                    <i class="lock icon"></i>
+                </div>
+            </div>
+            <div class="ui red submit small button">Login</div>
+        </div>
+    </div>
+
+    <!-- Signin panel -->
+
+    <div class="ui tab segment" data-tab="second">
+        <div class="ui form segment">
+            <div class="two fields">
+                <div class="field">
+                    <label>Username</label><input name="name" type="text">
+                </div>
+                <div class="field">
+                    <label>Age</label><input name="age" type="text">
+                </div>
+            </div>
+            <div class="field">
+                <div class="field">
+                    <label>About me</label><input name="aboutMe" type="text">
+                </div>
+            </div>
+            <div class="two fields">
+                <div class="field">
+                    <label>Location</label><input name="location" type="text">
+                </div>
+                <div class="field">
+                    <label>Site</label><input name="site" type="text">
+                </div>
+            </div>
+            <div class="two fields">
+                <div class="field">
+                    <label>Email</label><input name="email" type="text">
+                </div>
+                <div class="field">
+                    <label>Password</label><input name="password" type="password">
+                </div>
+            </div>
+            <div class="ui small blue submit button">Signup</div>
+        </div>
+    </div>
 </div>
 
     <!-- JS -->
