Update user entity & login view

--- a/web/src/main/webapp/WEB-INF/resources/html/index.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/index.html
@@ -53,7 +53,8 @@
                     <i class="lock icon"></i>
                 </div>
             </div>
-            <div class="ui red submit small button">Login</div>
+            <input class="ui red submit small button" type="submit" value="Login"/>
+            <!--<div class="ui red submit small button">Login</div>-->
         </div>
     </div>
 
