[#30]: welcome page html mockup

--- a/web/src/main/webapp/WEB-INF/resources/html/index.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/index.html
@@ -14,15 +14,123 @@
 </head>
 <body class="login-body">
 
-<div class="ui black small message">
-    <i class="close icon"></i>
-    <div class="header">
-        You must register before you can do that!
-    </div>
-    Visit our registration page, then try again
-</div>
+<!--<div class="ui black small message">-->
+    <!--<i class="close icon"></i>-->
+    <!--<div class="header">-->
+        <!--You must register before you can do that!-->
+    <!--</div>-->
+    <!--Visit our registration page, then try again-->
+<!--</div>-->
 
 <div class="ui piled segment">
+
+
+
+    <h2 class="ui header">
+        All questions
+    </h2>
+
+    <table class="ui basic table">
+        <thead>
+        <tr>
+            <th class="one wide"></th>
+            <th class="ten wide"></th>
+            <th class="one wide"></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td rowspan="2">Votes <br/> 10</td>
+            <td rowspan="2" colspan="2">
+                <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, ut.</b>
+                <br/>
+                <small>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem iste optio saepe sequi sit. Atque blanditiis facilis fuga minima veniam.
+                </small>
+            </td>
+        </tr>
+        <tr>
+        </tr>
+        <tr>
+            <td>Answers <br/>2</td>
+            <td>tag1 | tag2 | tag3 | tag4</td>
+            <td>
+                Dozortsev Anton <br/><br/>
+                <small>2013-12-12 / 19:08</small>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+    <hr/>
+
+    <table class="ui basic table">
+        <thead>
+        <tr>
+            <th class="one wide"></th>
+            <th class="ten wide"></th>
+            <th class="one wide"></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td rowspan="2">Votes <br/> 10</td>
+            <td rowspan="2" colspan="2">
+                <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, ut.</b>
+                <br/>
+                <small>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquid aperiam asperiores at aut culpa delectus deserunt dolores dolorum eos, eum fugit illo incidunt ipsa iure laboriosam maiores maxime nesciunt nihil nulla officiis perspiciatis possimus quae quo, quos repellendus sapiente, sit temporibus unde vel. Accusamus ad, dolore doloremque dolorum error excepturi officiis quasi unde. Id magni maxime minima quam quis rem reprehenderit saepe! Deserunt libero quae quod sit ullam. Soluta?
+                </small>
+            </td>
+        </tr>
+        <tr>
+        </tr>
+        <tr>
+            <td>Answers <br/>2</td>
+            <td>tag1 | tag2 | tag3 | tag4</td>
+            <td>
+                Dozortsev Anton <br/><br/>
+                <small>2013-12-12 / 19:08</small>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+    <hr/>
+
+    <table class="ui basic table">
+        <thead>
+        <tr>
+            <th class="one wide"></th>
+            <th class="ten wide"></th>
+            <th class="one wide"></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td rowspan="2">Votes <br/> 10</td>
+            <td rowspan="2" colspan="2">
+                <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, ut.</b>
+                <br/>
+                <small>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur ea earum eos est illo mollitia neque nulla quis repellat. Aliquam amet aspernatur, assumenda aut consequuntur deleniti dolore ex excepturi iste iusto laboriosam nam nihil optio perspiciatis praesentium quod ratione ullam?
+                </small>
+            </td>
+        </tr>
+        <tr>
+        </tr>
+        <tr>
+            <td>Answers <br/>2</td>
+            <td>tag1 | tag2 | tag3 | tag4</td>
+            <td>
+                Dozortsev Anton <br/><br/>
+                <small>2013-12-12 / 19:08</small>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+    <hr/>
 
 </div>
 
