--- a/web/src/main/webapp/WEB-INF/resources/html/index.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/index.html
@@ -22,9 +22,16 @@
     <!--Visit our registration page, then try again-->
 <!--</div>-->
 
+<!--<div class="ui inverted segment">-->
+    <!--<h3 class="ui left tiny floated header">-->
+        <!--Go Back-->
+    <!--</h3>-->
+    <!--<h3 class="ui right tiny floated header">-->
+        <!--<a class="ui small blue submit button" href="#">Logout</a>-->
+    <!--</h3>-->
+<!--</div>-->
+
 <div class="ui piled segment">
-
-
 
     <h2 class="ui header">
         All questions
@@ -53,7 +60,7 @@
         </tr>
         <tr>
             <td>Answers <br/>2</td>
-            <td>tag1 | tag2 | tag3 | tag4</td>
+            <td><a class="ui teal label">Unread</a> <a class="ui teal label">Comics</a></td>
             <td>
                 Dozortsev Anton <br/><br/>
                 <small>2013-12-12 / 19:08</small>
@@ -133,6 +140,32 @@
     <hr/>
 
 </div>
+
+<div class="ui inverted pagination menu">
+    <a class="icon item">
+        <i class="left arrow icon"></i>
+    </a>
+    <a class="active item">
+        1
+    </a>
+    <div class="disabled item">
+        &hellip;
+    </div>
+    <a class="item">
+        10
+    </a>
+    <a class="item">
+        11
+    </a>
+    <a class="item">
+        12
+    </a>
+    <a class="icon item">
+        <i class="right arrow icon"></i>
+    </a>
+</div>
+
+<br/><br/><br/><br/>
 
     <!-- JS -->
 
