--- a/web/src/main/webapp/WEB-INF/resources/html/index.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/index.html
@@ -141,28 +141,13 @@
 
 </div>
 
-<div class="ui inverted pagination menu">
-    <a class="icon item">
-        <i class="left arrow icon"></i>
-    </a>
-    <a class="active item">
-        1
-    </a>
-    <div class="disabled item">
-        &hellip;
-    </div>
-    <a class="item">
-        10
-    </a>
-    <a class="item">
-        11
-    </a>
-    <a class="item">
-        12
-    </a>
-    <a class="icon item">
-        <i class="right arrow icon"></i>
-    </a>
+<div class="ui borderless pagination menu">
+    <a class="item">1</a>
+    <a class="item">2</a>
+    <a class="item">3</a>
+    <a class="item">4</a>
+    <a class="item">5</a>
+    <a class="item">6</a>
 </div>
 
 <br/><br/><br/><br/>
