--- a/web/src/main/webapp/WEB-INF/resources/html/index.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/index.html
@@ -47,7 +47,35 @@
         </thead>
         <tbody>
         <tr>
-            <td rowspan="2">Votes <br/> 10</td>
+            <td rowspan="2">
+                <div class="grouped inline fields">
+                    <div class="ui tiny toggle button">
+                        <i class="up arrow icon"></i>
+                    </div>
+                    <!--<div class="field">-->
+                        <!--<div class="ui radio checkbox">-->
+                            <!--<input type="radio" name="fruit" value="vote-up">-->
+                            <!--<label>Up</label>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    12
+                    <!--<div class="field">-->
+                        <!--<div class="ui radio checkbox">-->
+                            <!--<input type="radio" name="fruit" value="vote-none" checked="ckecked">-->
+                            <!--<label>1</label>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <div class="ui tiny toggle button">
+                        <i class="down arrow icon"></i>
+                    </div>
+                    <!--<div class="field">-->
+                        <!--<div class="ui radio checkbox">-->
+                            <!--<input type="radio" name="fruit" value="vote-down">-->
+                            <!--<label>Down</label>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                </div>
+            </td>
             <td rowspan="2" colspan="2">
                 <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, ut.</b>
                 <br/>
@@ -59,7 +87,7 @@
         <tr>
         </tr>
         <tr>
-            <td>Answers <br/>2</td>
+            <td></td>
             <td><a class="ui teal label">Unread</a> <a class="ui teal label">Comics</a></td>
             <td>
                 Dozortsev Anton <br/><br/>
