--- a/web/src/main/webapp/WEB-INF/resources/html/index.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/index.html
@@ -29,20 +29,20 @@
         <tr>
             <td rowspan="2">Votes<br>10</td>
             <td colspan="2">
-                <div id="quest1">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto laboriosam laudantium nisi. Amet assumenda
-                    deserunt distinctio dolor doloribus eveniet facere itaque, labore magni,
+                <div id="question-content" style="display: none;">
+Lorem ipsum dolor **sit amet, consectetur adipisicing elit**. Iusto laboriosam laudantium nisi. Amet assumenda
+                    deserunt distinctio dolor doloribus eveniet facere itaque.
+
+Labore magni,
                     modi neque nesciunt nobis officia porro provident quaerat quam qui quod recusandae repellat saepe voluptas,
                     voluptatem voluptates?
 
-                    * item 1
-                    * item 2
+ * item 1
+ * item 2
 
-                    [Link]() and command: `git fetch && git merge`.
+ [Link](https://www.google.com/) and command: `git fetch && git merge`.
                 </div>
-                <br/><br/><br/>
-                <div id="question-content">
-                </div>
+                <div id="question-preview" class="content-body markdown-body"></div>
             </td>
         </tr>
         <tr>
