--- a/web/src/main/webapp/WEB-INF/resources/html/user.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/user.html
@@ -16,9 +16,121 @@
 </head>
 <body class="login-body">
 
+<div class="ui red inverted menu">
+    <a class="active item">
+        <i class="home icon"></i>Home
+    </a>
+    <a class="item">
+        <i class="mail icon"></i>Messages
+    </a>
+    <a class="item">
+        <i class="user icon"></i>Friends
+    </a>
+</div>
+
 <div class="ui piled segment">
 
+    <p>
 
+    <h3>USERS</h3>
+    </p>
+    <div class="ui divider"></div>
+    <p>
+
+    <div class="ui action input">
+        <div class="ui icon input">
+            <input type="text" placeholder="Search..." name="name" autofocus="true">
+            <i class="search icon"></i>
+        </div>
+    </div>
+    </p>
+
+    <div class="ui four connected items">
+        <div class="row">
+            <div class="item">
+                <div class="content">
+                    <div class="name">Cute</div>2011-01-12 / 13:34
+                    <p class="description">
+                        This dog has some things going for it. Its pretty cute and looks like it'd be
+                        fun to cuddle up with.
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="content">
+                    <div class="name">Faithful</div>
+                    <p class="description">Sometimes its more important to have a dog you know you can trust. But not
+                        every dog is trustworthy, you can tell by looking at its smile.
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="content">
+                    <div class="name">Silly</div>
+                    <p class="description">Silly dogs can be quite fun to have as companions. You never know what kind
+                        of ridiculous thing they will do.
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="content">
+                    <div class="name">Cute</div>
+                    <p class="description">This dog has some things going for it. Its pretty cute and looks like it'd be
+                        fun to cuddle up with.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="item">
+                <div class="content">
+                    <div class="name">Cute</div>2011-01-12 / 13:34
+                    <p class="description">
+                        This dog has some things going for it. Its pretty cute and looks like it'd be
+                        fun to cuddle up with.
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="content">
+                    <div class="name">Faithful</div>
+                    <p class="description">Sometimes its more important to have a dog you know you can trust. But not
+                        every dog is trustworthy, you can tell by looking at its smile.
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="content">
+                    <div class="name">Silly</div>
+                    <p class="description">Silly dogs can be quite fun to have as companions. You never know what kind
+                        of ridiculous thing they will do.
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="content">
+                    <div class="name">Cute</div>
+                    <p class="description">This dog has some things going for it. Its pretty cute and looks like it'd be
+                        fun to cuddle up with.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Users -->
+
+    <!--<div class="ui borderless pagination menu">-->
+
+        <!--<c:set var="setSize" value="${fn:length(users)}"/>-->
+
+        <!--<c:forEach var="i" begin="1" end="${(setSize != 10 ? 0 : userCount / 10) + 0.5}" step="1">-->
+            <!--<a class="item" href="${path}/users?page=${i}">${i}</a>&emsp;-->
+        <!--</c:forEach>-->
+
+    <!--</div>-->
 
 </div>
 
