--- a/web/src/main/webapp/WEB-INF/resources/html/index.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/index.html
@@ -15,125 +15,80 @@
     <link rel="stylesheet" href="../css/style.css"/>
 
 </head>
-<body class="login-body" onload="foo()">
+
+<body class="login-body">
 
 <div class="ui piled segment">
 
-    <table class="ui basic table">
-        <thead>
-        <tr>
-            <th class="ui header" colspan="3">Lorem ipsum dolor sit amet ?</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td rowspan="2">Votes<br>10</td>
-            <td colspan="2">
-                <div id="question-content" style="display: none;">
-Lorem ipsum dolor **sit amet, consectetur adipisicing elit**. Iusto laboriosam laudantium nisi. Amet assumenda
-                    deserunt distinctio dolor doloribus eveniet facere itaque.
+    <p>
+    <h3>Dozortsev Anton</h3>
+    </p>
+    <div class="ui divider"></div>
 
-Labore magni,
-                    modi neque nesciunt nobis officia porro provident quaerat quam qui quod recusandae repellat saepe voluptas,
-                    voluptatem voluptates?
+</div>
 
- * item 1
- * item 2
+<div class="ui grid">
+    <div class="eight wide column">
+        <div class="ui vertical fluid menu">
+            <div class="header center item">
+                Questions
+            </div>
+            <div class="item">
 
- [Link](https://www.google.com/) and command: `git fetch && git merge`.
-                </div>
-                <div id="question-preview" class="content-body markdown-body"></div>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <a class="ui teal label">Tag 1</a>&thinsp;<a class="ui teal label">Tag 2</a>&thinsp;<a class="ui teal label">Tag 3</a>
-            </td>
-            <td>Asked&ensp;2014-12-11 / 16:45 <a href="#">Dozortsev Anton</a></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td colspan="2">
+                <table class="ui basic table">
+                    <tbody>
+                    <tr>
+                        <td>12</td>
+                        <td>Lorem ipsum dolor sit amet ?</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, saepe?</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum nostrum officiis quisquam?</td>
+                    </tr>
+                    </tbody>
+                </table>
 
-                <div class="ui comments">
-                    <div class="comment">
-                        <div class="content">
+            </div>
+        </div>
+    </div>
 
-                            <div class="text">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque dicta dolor dolorum eum minima odit perspiciatis praesentium reprehenderit suscipit?
-                                <i>2 days ago</i> <a class="author"><b>Dog Doggington</b></a>
-                                <a href="#" class="delete"><i class="remove icon"></i></a>
-                            </div>
-
-                            <div class="text">
-                                I think this is a great idea and i am voting on it
-                                <i>2 days ago</i> <a class="author"><b>Dog Doggington</b></a>
-                                <a href="#" class="delete"><i class="remove icon"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <form class="ui reply form">
-                        <div class="field">
-                            <textarea name="comment" cols="200" rows="3"
-                                      placeholder="Use comments to ask for more information or suggest improvements. Avoid answering questions in comments.">
-
-                            </textarea>
-
-                            <div class="ui button small red submit labeled">
-                                Add
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-
-    <div class="ui section divider"></div>
-
-    <table class="ui basic table">
-        <thead>
-        <tr>
-            <th class="ui header" colspan="3">2 Answer</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td rowspan="2">Votes<br>20</td>
-            <td colspan="2">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci amet at deleniti dolorem expedita id
-                in, maxime nobis nulla possimus rerum vel. Ab architecto asperiores atque blanditiis commodi culpa cum
-                cumque distinctio doloribus eius explicabo illum impedit laborum laudantium libero magnam non nulla
-                officia provident ullam, ut vero voluptatum? Provident.
-            </td>
-        </tr>
-        <tr>
-            <td></td>
-            <td>Asked&ensp;2014-12-11 / 16:45 <a href="#">Dozortsev Anton</a></td>
-        </tr>
-
-        <tr>
-            <td rowspan="2">Votes<br>20</td>
-            <td colspan="2">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad architecto at corporis eligendi illo illum
-                impedit, ipsam laudantium nesciunt nobis odio quae rerum similique tempore tenetur voluptatem
-                voluptatibus! Animi aut distinctio dolor ducimus earum eligendi enim esse in, nam nesciunt, officia quae
-                quidem repellendus sed similique soluta suscipit tenetur velit. Beatae, cumque earum eius excepturi
-                facere hic ipsum itaque molestias repellendus similique ut velit voluptatem! Alias dolorum est expedita
-                in ipsa molestiae ratione reprehenderit repudiandae tempora vel. Dolor, dolore error magnam odit
-                perferendis quisquam quo sequi sit ullam voluptatum. A amet et exercitationem itaque iure natus, nisi
-                omnis qui voluptate!
-            </td>
-        </tr>
-        <tr>
-            <td></td>
-            <td>
-                Asked&ensp;2014-12-11 / 16:45<a href="#">Dozortsev Anton</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="eight wide column">
+        <div class="ui vertical fluid menu">
+            <div class="header center item">
+                Answers
+            </div>
+            <div class="item">
+                <table class="ui basic table">
+                    <tbody>
+                    <tr>
+                        <td>12</td>
+                        <td>Lorem ipsum dolor sit amet ?</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, saepe?</td>
+                    </tr>
+                    <tr>
+                        <td>0</td>
+                        <td>Lorem ipsum dolor sit amet ?</td>
+                    </tr>
+                    <tr>
+                        <td>12</td>
+                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus doloribus eligendi fugiat in ipsum laboriosam quam quo sed totam?</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum nostrum officiis quisquam?</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- JS -->
