--- a/web/src/main/webapp/WEB-INF/resources/html/index.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/index.html
@@ -11,7 +11,6 @@
     <link rel="shortcut icon" href="../img/logo.png">
 
     <link rel="stylesheet" href="../css/semantic.css"/>
-    <link rel="stylesheet" href="../css/md-style.css"/>
     <link rel="stylesheet" href="../css/style.css"/>
 
 </head>
@@ -20,75 +19,35 @@
 
 <div class="ui piled segment">
 
-    <p>
-    <h3>Dozortsev Anton</h3>
-    </p>
-    <div class="ui divider"></div>
-
-</div>
-
-<div class="ui grid">
-    <div class="eight wide column">
-        <div class="ui vertical fluid menu">
-            <div class="header center item">
-                Questions
+    <div class="ui form segment">
+        <p>Let's go ahead and get you signed up.</p>
+        <div class="two fields">
+            <div class="field">
+                <label>First Name</label>
+                <input placeholder="First Name" name="first-name" type="text">
             </div>
-            <div class="item">
-
-                <table class="ui basic table">
-                    <tbody>
-                    <tr>
-                        <td>12</td>
-                        <td>Lorem ipsum dolor sit amet ?</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, saepe?</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum nostrum officiis quisquam?</td>
-                    </tr>
-                    </tbody>
-                </table>
-
+            <div class="field">
+                <label>Last Name</label>
+                <input placeholder="Last Name" name="last-name" type="text">
             </div>
         </div>
-    </div>
-
-    <div class="eight wide column">
-        <div class="ui vertical fluid menu">
-            <div class="header center item">
-                Answers
-            </div>
-            <div class="item">
-                <table class="ui basic table">
-                    <tbody>
-                    <tr>
-                        <td>12</td>
-                        <td>Lorem ipsum dolor sit amet ?</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, saepe?</td>
-                    </tr>
-                    <tr>
-                        <td>0</td>
-                        <td>Lorem ipsum dolor sit amet ?</td>
-                    </tr>
-                    <tr>
-                        <td>12</td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus doloribus eligendi fugiat in ipsum laboriosam quam quo sed totam?</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum nostrum officiis quisquam?</td>
-                    </tr>
-                    </tbody>
-                </table>
+        <div class="field">
+            <label>Username</label>
+            <input placeholder="Username" name="username" type="text">
+        </div>
+        <div class="field">
+            <label>Password</label>
+            <input type="password" name="password">
+        </div>
+        <div class="inline field">
+            <div class="ui checkbox">
+                <input type="checkbox" name="terms">
+                <label>I agree to the terms and conditions</label>
             </div>
         </div>
+        <div class="ui blue submit button">Submit</div>
     </div>
+
 </div>
 
 <!-- JS -->
