[#30]: Update .piled and users.jsp

--- a/web/src/main/webapp/WEB-INF/resources/html/user.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/user.html
@@ -51,8 +51,10 @@
                 <div class="content">
                     <div class="name">Cute</div>2011-01-12 / 13:34
                     <p class="description">
-                        This dog has some things going for it. Its pretty cute and looks like it'd be
-                        fun to cuddle up with.
+                        <small>
+                            This dog has some things going for it. Its pretty cute and looks like it'd be
+                            fun to cuddle up with.
+                        </small>
                     </p>
                 </div>
             </div>
