--- a/web/src/main/webapp/WEB-INF/resources/html/index.html
+++ b/web/src/main/webapp/WEB-INF/resources/html/index.html
@@ -11,42 +11,91 @@
     <link rel="shortcut icon" href="../img/logo.png">
 
     <link rel="stylesheet" href="../css/semantic.css"/>
+    <link rel="stylesheet" href="../css/md-style.css"/>
     <link rel="stylesheet" href="../css/style.css"/>
 
 </head>
 
-<body class="login-body">
+<body class="login-body" onload="mdLivePreview('#raw-content', '#preview-content')">
 
 <div class="ui piled segment">
 
-    <div class="ui form segment">
-        <p>Let's go ahead and get you signed up.</p>
-        <div class="two fields">
-            <div class="field">
-                <label>First Name</label>
-                <input placeholder="First Name" name="first-name" type="text">
+    <main class="ui one column grid items">
+        <section class="column">
+            <div class="item">
+                <div class="content">
+                    Dozortsev Anton
+                    <br/>
+                    <small>12-09-2009 / 19:34</small>
+                    dozortsev@gmail.com
+                    <small>http://dozortsev.com</small>
+                </div>
             </div>
-            <div class="field">
-                <label>Last Name</label>
-                <input placeholder="Last Name" name="last-name" type="text">
-            </div>
-        </div>
-        <div class="field">
-            <label>Username</label>
-            <input placeholder="Username" name="username" type="text">
-        </div>
-        <div class="field">
-            <label>Password</label>
-            <input type="password" name="password">
-        </div>
-        <div class="inline field">
-            <div class="ui checkbox">
-                <input type="checkbox" name="terms">
-                <label>I agree to the terms and conditions</label>
-            </div>
-        </div>
-        <div class="ui blue submit button">Submit</div>
-    </div>
+        </section>
+        <section class="column">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at blanditiis consectetur dolor facilis
+            iusto labore porro unde vero? Assumenda id molestias, odio quo reiciendis repudiandae tempora veritatis
+            voluptates! Vitae.
+        </section>
+        <section class="column">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci autem consectetur, consequatur deserunt
+            eaque inventore ipsa iste iure iusto magni nemo nobis odio omnis quam quis reiciendis repellat, saepe sunt?
+        </section>
+        <section class="column">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci autem consectetur, consequatur deserunt
+            eaque inventore ipsa iste iure iusto magni nemo nobis odio omnis quam quis reiciendis repellat, saepe sunt?
+        </section>
+        <section class="column">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci autem consectetur, consequatur deserunt
+            eaque inventore ipsa iste iure iusto magni nemo nobis odio omnis quam quis reiciendis repellat, saepe sunt?
+        </section>
+        <section class="column">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci autem consectetur, consequatur deserunt
+            eaque inventore ipsa iste iure iusto magni nemo nobis odio omnis quam quis reiciendis repellat, saepe sunt?
+        </section>
+        <section class="column">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at blanditiis consectetur dolor facilis
+            iusto labore porro unde vero? Assumenda id molestias, odio quo reiciendis repudiandae tempora veritatis
+            voluptates! Vitae.
+        </section>
+        <section class="column">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci autem consectetur, consequatur deserunt
+            eaque inventore ipsa iste iure iusto magni nemo nobis odio omnis quam quis reiciendis repellat, saepe sunt?
+        </section>
+        <section class="column">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci autem consectetur, consequatur deserunt
+            eaque inventore ipsa iste iure iusto magni nemo nobis odio omnis quam quis reiciendis repellat, saepe sunt?
+        </section>
+        <section class="column">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci autem consectetur, consequatur deserunt
+            eaque inventore ipsa iste iure iusto magni nemo nobis odio omnis quam quis reiciendis repellat, saepe sunt?
+        </section>
+        <section class="column">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci autem consectetur, consequatur deserunt
+            eaque inventore ipsa iste iure iusto magni nemo nobis odio omnis quam quis reiciendis repellat, saepe sunt?
+        </section>
+        <section class="column">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at blanditiis consectetur dolor facilis
+            iusto labore porro unde vero? Assumenda id molestias, odio quo reiciendis repudiandae tempora veritatis
+            voluptates! Vitae.
+        </section>
+        <section class="column">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci autem consectetur, consequatur deserunt
+            eaque inventore ipsa iste iure iusto magni nemo nobis odio omnis quam quis reiciendis repellat, saepe sunt?
+        </section>
+        <section class="column">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci autem consectetur, consequatur deserunt
+            eaque inventore ipsa iste iure iusto magni nemo nobis odio omnis quam quis reiciendis repellat, saepe sunt?
+        </section>
+        <section class="column">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci autem consectetur, consequatur deserunt
+            eaque inventore ipsa iste iure iusto magni nemo nobis odio omnis quam quis reiciendis repellat, saepe sunt?
+        </section>
+        <section class="column">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci autem consectetur, consequatur deserunt
+            eaque inventore ipsa iste iure iusto magni nemo nobis odio omnis quam quis reiciendis repellat, saepe sunt?
+        </section>
+    </main>
 
 </div>
 
